Tidied less file

--- a/less/index.less
+++ b/less/index.less
@@ -3,6 +3,19 @@
     font-weight: 300;
 }
 
+//imports
+@import 'homepage.less';
+@import 'browseworkerspage.less';
+@import 'login.less';
+
+//mixins 
+.blackAndWhite() {
+    background-color: black;
+    color: white;
+}
+
+
+
 //variables
 @mobile: ~"(max-width: 500px)";
 @tablet: ~"(max-width: 800px)";
@@ -95,542 +108,6 @@ body {
         }
     }
 
-    section {
-        width: 100%;
-    }
-
-    .jumbo {
-       width: 100%;
-        img {    
-          width:100%;  
-          padding-top: 52px;  
-          margin-bottom: -10px; 
-          max-height: 630px;
-          @media (max-width: 650px){
-              padding-top: 120px;
-          }
-        }    
-
-    }
-
-    .intro {
-        background-color: black;
-        width: 100%;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        @media @tablet {
-            flex-direction: column;
-        }
-       
-        .intro-text {
-            padding: 2rem;
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-
-            @media @tablet {
-                width: 80%;
-            }
-
-            h2 {
-                margin-top: 0;
-            }
-
-        }
-        .intro-img {
-            text-align: center;
-            padding: 2rem;
-            width: 50%;
-            img {
-                width: 100%;
-                max-height: 465px;
-                height: 100%;
-
-                @media @tablet {
-                    display: none;
-                }
-            }
-        }
-
-
-
-        .sign-me-up {
-            width: 48%;
-            background-color: #2ECC71;
-            height: 2.3rem;
-            border: none;
-            color: white;
-            font-size: 1.3rem;
-
-            @media @mobile {
-                width: 100%;
-                
-            }
-        }
-    }
-    
-
-    .sign-up {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        max-width: 1150px;
-        margin: 0 auto;
-        margin-bottom: 3rem;
-
-        .sign-up-header {
-            h2 {
-                font-size: 5rem;
-                width: 80%;
-                margin: 4rem auto;
-                text-align: center;
-                @media @tablet {
-                    font-size: 3rem;
-                }
-            }
-        }
-        
-        .sign-up-content {
-            display: flex;
-            width: 100%;
-            justify-content: space-around;
-             @media @mobile {
-                 flex-direction: column;
-                 align-items: center;
-             }
-        
-
-            .sign-up-col {
-                width: 48%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                @media @mobile {
-                    width: 75%;
-                    margin-bottom: 2rem;
-                }
-
-                h3 {
-                    font-size: 3rem;
-                    border-bottom: 2px dashed black;
-                    width: 50%;
-                    padding: 1rem;
-                    text-align: center;
-                    margin-top: 0;
-                    @media @mobile {
-                        color: white;
-                        background-color: black;
-                        width: 100%;
-                        height: 2rem;
-                        text-align: center;
-                        padding: 0.75rem ;                       
-                    }
-                    @media @tablet, @mobile {
-                        font-size: 2rem;
-                    }
-                }
-
-                .step-box {
-                    width: 50%;
-                    height: 250px;
-                    text-align: center;
-                    margin-bottom: 2rem;
-                    border: 1px solid black;
-                    padding: 2rem 1rem;
-
-                    @media @mobile, @tablet{
-                        width: 75%;
-                        height: 250px;
-                    }
-
-                    p {
-                        font-size: 1.4rem;
-                    }
-                }
-            }
-            .bori {
-                border-right: 1px solid black;
-
-                @media @mobile {
-                    border-right: none;
-                }
-            }
-        }
-        a {
-            width: 100%;
-            text-align: center;
-        }
-        .sign-me-up {
-            width: 78%;
-            background-color: #2ECC71;
-            height: 4rem;
-            border: none;
-            color: white;
-            font-size: 1.3rem;
-            margin: 2rem 0;
-
-            @media @mobile, @tablet {
-                width: 91%;
-            }
-        }
-        border-bottom: 1px solid black;
-    }
-
-    .browse-workers-home {
-        width:100%;
-        display: flex;
-        flex-direction:column;
-        align-items: center;
-        margin: 0 auto;
-        .browse-workers-header-home {
-
-            width: 90%;
-            padding: 1rem ;
-            background-color: black;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid black;
-
-            h1 {
-                font-size: 2rem;
-                @media @tablet {
-                    background-color: black;
-                    color: white;
-                    margin: 0 auto;
-                    text-align: center;
-                    padding: 1rem 0;
-                    width: 75%;
-                }
-
-                @media @mobile {
-                    font-size: 1.9rem;
-                    padding: 1.5rem;
-                }
-            }
-            .searchbar {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-bottom: 2rem;
-
-                @media @tablet {
-                    flex-direction: column;
-                    img {
-                        display: none;
-                    }
-                }
-
-                input, select {
-                    margin-left: 1rem;
-                    width: 15rem;
-                    text-align: center;
-                    border-radius: 5px;
-                    height: 1.8rem;
-                    border: none;
-
-                    @media @tablet {
-                        width: 25rem;
-                        margin-bottom: 2rem;
-                    }
-                }
-
-                button {
-                    margin-left: 1rem;
-
-                }
-                .go {
-                    width: 5rem;
-                    height:2rem;
-                    border-radius: 6px;
-                    background-color: #2ECC71;
-                    color: white;
-                    font-size: 1rem;
-                    border: none;
-                    @media @tablet {
-                        width: 15rem;
-                    }
-                }
-            }
-
-        }
-
-        .browse-workers-header-home {
-            margin-bottom: 2rem;
-        }
-
-        .browse-workers-content-home {
-            width: 100%;
-            display: flex;
-            justify-content: space-evenly;
-
-            @media @tablet {
-            flex-direction: column;
-            align-items: center;
-            }
-
-            .browse-workers-col-home {
-                width: 40%;
-                text-align: center;
-
-                @media @tablet {
-                    width: 75%
-                }
-
-                @media @mobile {
-                    width: 85%;
-                }
-
-                .browse-workers-box-home {
-                    padding: 2.5rem;
-                    border: 1px solid black;
-                    margin-bottom: 4rem;
-                    img {
-                        width: 75%;
-                    }
-
-                    .send-tip-btn {
-                        width: 75%;
-                        background-color: #2ECC71;
-                        height: 3rem;
-                        border: none;
-                        color: white;
-                        font-size: 1.3rem;
-                        margin: 2rem 0;
-            
-                        @media @tablet {
-            
-                        }
-
-                        @media @mobile {
-                            width: 85%;
-                        }
-                    }
-                }
-            }
-            
-        }
-        .browse {
-            background-color: black;
-            color: white;
-            padding: 1.5rem;
-            font-size: 1.3rem;
-            margin-bottom: 4rem;
-        }
-    }
-
-
-    .browse-businesses {
-        margin: 0;
-        width: 100%;
-        img {
-            width: 100%;
-            margin-bottom: -10px;
-        }    
-
-        .sign-me-up {
-            width: 100%;
-            height: 5rem;
-            background-color: #2ECC71;
-            border: none;
-            color: white;
-            font-size: 1.3rem;
-            margin: 0;
-
-            @media @mobile {
-                height: 3rem;
-                font-size: 1rem;
-            }
-        }
-    }
-
-    .browse-workers {
-        width:100%;
-        display: flex;
-        flex-direction:column;
-        align-items: center;
-        margin: 0 auto;
-        .browse-workers-header {
-
-            width: 100%;
-
-            .searchbar {
-                display: flex;
-                background-color: black;
-                padding: 1rem 0 ;
-                width: 100%;
-                color: white;
-                justify-content: center;
-                align-items: center;
-                margin: 4.5rem 0 2rem 0;
-                 
-                @media (max-width: 870px){
-                    margin-top: 5.8rem;
-                }
-                @media (max-width:650px) {
-                    margin-top: 8.4rem;
-                }
-
-                @media @tablet {
-                    flex-direction: column;
-                    padding:2rem 0;
-                    img {
-                        display: none;
-                    }
-                }
-
-                input, select {
-                    margin-left: 1rem;
-                    width: 15rem;
-                    text-align: center;
-                    border-radius: 5px;
-                    height: 1.8rem;
-                    border: none;
-
-                    @media @tablet {
-                        width: 25rem;
-                        margin-bottom: 2rem;
-                    }
-                }
-
-                button {
-                    margin-left: 1rem;
-
-                }
-                .go {
-                    width: 5rem;
-                    height:2rem;
-                    border-radius: 6px;
-                    background-color: #2ECC71;
-                    color: white;
-                    font-size: 1rem;
-                    border: none;
-                    @media @tablet {
-                        width: 15rem;
-                    }
-                }
-            }
-
-        }
-
-        .browse-workers-content {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-
-            .browse-workers-row {
-                width: 100%;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-evenly;
-
-                .browse-workers-box {
-                    width: 20%;
-                    margin-bottom: 2rem;
-                    text-align: center;
-                    @media @tablet {
-                        width: 50%;
-                    }
-                    @media @mobile {
-                        width: 75%;
-                    }
-                    border: 1px solid black;
-
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    padding: 2rem;
-
-                    img {
-                        width: 80%;
-                    }
-
-                    &.hide {
-                        @media (max-width: 900px) {
-                            display: none;
-                        }
-                    }
-                    .send-tip-btn {
-                        width: 75%;
-                        background-color: #2ECC71;
-                        height: 3rem;
-                        border: none;
-                        color: white;
-                        font-size: 1.3rem;
-                        margin: 2rem 0 0.75rem 0;
-            
-                        @media @tablet {
-            
-                        }
-
-                        @media @mobile {
-                            width: 85%;
-                        }
-                    }
-
-                    &.worker-enlarge {
-                        width: 51.2%;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                        justify-content: center;
-                        @media (max-width: 900px) {
-                            width: 83.5%;
-                        }
-                        @media @tablet {
-                            width: 50%;
-                            flex-direction: column;
-                        }
-                        @media @mobile {
-                            width: 75%;
-                        }
-                        
-                        img {
-                            width: 40%;
-
-                            @media @tablet {
-                                width: 80%;
-                            }
-                        }
-                        .worker-info {
-                            width: 40%;
-                            padding: 2rem;
-                            text-align: left;
-                            @media @tablet {
-                                width: 80%;
-                            }
-                        }
-                        .send-tip-btn {
-                            width: 90%;
-                            margin-bottom: 0.75rem;
-                            @media @mobile {
-                                width: 85%;
-                            }
-                        }
-                       
-                    }
-                
-                }
-            }
-            
-        }
-        .browse {
-            background-color: black;
-            color: white;
-            padding: 1.5rem;
-            font-size: 1.3rem;
-            margin-bottom: 4rem;
-        }
-    }
-
-
-
-
 
 
     footer {
@@ -646,99 +123,6 @@ body {
         }
     }
 
-    .forms-container {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        margin: 0 auto;
-        text-align: center;
-        margin-top: 4rem;
-
-        @media @tablet{
-            margin-top: 6rem;
-        }
-
-        @media @mobile {
-            flex-direction: column;
-            height: auto;
-            margin-top: 8rem;
-        }
-
-        .form-col{
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            margin: 2rem auto;
-
-            @media @mobile {
-                width: 75%;
-                border: 1px solid black;
-            }
-
-            h2 {
-                text-decoration: underline;
-            }
-            h4 {
-                margin: 1rem auto;
-                padding-bottom: 1rem;
-                width: 50%;
-                border-bottom: 1px solid black;
-
-                @media @tablet {
-                    width: 75%;
-                }
-            }
-
-            form input, select {
-                text-align: center;
-                width: 50%;
-                margin: 0.75rem;
-                height: 2rem;
-                border: 1px solid black;
-
-                @media @tablet {
-                    width: 75%;
-                }
-            }
-
-            .google-login {
-                border: 1px solid black;
-                width: 50%;
-                margin: 1rem auto;
-                padding: 1rem 0;
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-
-                @media @tablet {
-                    width: 75%;
-                }
-            }
-
-            .sign-me-up {
-                width: 50%;
-                height: 2.2rem;
-                background-color: #2ECC71;
-                border: none;
-                color: white;
-                font-size: 1.3rem;
-                margin: 0.75rem 0;
-
-                @media @tablet {
-                    width: 75%;
-                }
-        }}
-
-        .bori {
-            border-right: 1px solid black;
-
-            @media @mobile {
-                border-right: none;
-            }
-        }
-    }
 }
 
 
