--- a/less/login.less
+++ b/less/login.less
@@ -70,13 +70,8 @@
                 }
             }
 
-            .sign-me-up {
-                width: 50%;
-                height: 2.2rem;
-                background-color: #2ECC71;
-                border: none;
-                color: white;
-                font-size: 1.3rem;
+            button {
+                .green-btn(50%, 2.2rem, 1.3rem);
                 margin: 0.75rem 0;
 
                 @media @tablet {
