--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,7 +1,3 @@
-
-
-
-
 section {
     width: 100%;
 }
@@ -23,10 +19,8 @@ section {
 
 .intro {
     .blackAndWhite();
+    .flex(column, space-between, center);
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 
     @media @tablet {
         flex-direction: column;
@@ -79,7 +73,7 @@ section {
 
 .sign-up {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     width: 100%;
     max-width: 1150px;
