--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,3 +17,10 @@
 
     }
 }
+
+.flex(@flexDirection, @justifyContent, @alignItems){
+    display: flex;
+    flex-direction: @flexDirection;
+    justify-content: @justifyContent;
+    align-items: @alignItems;
+}
